Changelog
=========

1.0.1 (unreleased)
------------------


1.0 (2011-04-30)
----------------

* Made compatible with Plone 4.1 by loading the permissions.zcml from
  Products.CMFCore (only when plone.app.upgrade is available, to keep
  compatibility with Plone 3, if we currently have that).
  [maurits]

* Improved CSS for selected items to make them more evident in the Sunburst
  theme.
  [davisagli]

* Add content type CSS class to items in the navtree so that icons are shown
  in Plone 4.
  [davisagli]

1.0b3 (2011-02-11)
------------------

* Use `zope.i18n.translate` instead of translation_service, since
  translation_service was removed in plone4.
  [jbaumann]


1.0b2 (2010-08-25)
------------------

* Fall back to the site to perform content-related operations if the
  context is not wrapped into an acquisition chain.
  [dukebody]

* Compute the view name as the request URL left-stripped the content
  absolute URL.
  [dukebody]

* Make it possible to restrict the field to objects below a path
  The constructor of ObjPathSource takes a path keyword argument
  with a PathIndex catalog query. This argument filters objects
  outside of this path. If the navigation_tree_query does not have
  a path argument, the path is also copied into this query.
  [gaudenzius]

* Update widget in the contenttree-fetch browser view
  The widget.update() call rebinds to source which previously
  was only bound during traversal. This avoids problems with
  sources that only work after security is applied.
  [gaudenzius]


1.0b1 - 2010-04-19
------------------

* Adjusted styles so the widget looks reasonable with Plone 4's sunburst theme.
  [davisagli]

* Fix icons in CMF 2.2.  This closes
  http://code.google.com/p/dexterity/issues/detail?id=111
  [davisagli]

* Make the widget work properly on Zope 2.12
  [optilude]

* Add a template for HIDDEN_MODE.
  [csenger]

* Convert all strings in a new navtree node into unicode using the site